--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "metacam-pointcloud",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".", 
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -15,10 +15,12 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.174.0",
     "eventemitter2": "^6.4.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
     "ros3d": "^1.1.0",
     "roslib": "^1.4.1",
